<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prototype_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1959180242@qq.com">vehshanaan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


<!--
  他这个注释格式有点脑损伤
  这里不加也可以通过编译，他说加这个主要是为了编译时有一个检查作用
-->

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosldl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
